Filter out uncertified versions in v3 collection versions endpoint (#123)
* Filter out uncertified versions in v3 collection versions endpoint
